syntax = "proto3";

package ch.unibas.ub.mediaserver;

option go_package = "github.com/je4/mediaserver/v2/pkg/protos";
import "google/protobuf/empty.proto";

service Database {
  // ping the database
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {};
  // get data from a cache entry
  rpc GetCache(CacheRequest) returns (CacheResult) {};
  // create new item
  rpc CreateItem(CreateItemRequest) returns (Item) {}
}

// request message containing collections, signature and urn
message CreateItemRequest {
  string collection = 1;
  string signature = 2;
  string urn = 3;
}

// item representation
message Item {
  string collection = 1;
  string signature = 2;
  string urn = 3;
  string type = 4;
  string subtype = 5;
  string objectType = 6;
  string parentCollection = 7;
  string parentSignature = 8;
  string mimetype = 9;
  string sha512 = 10;
  string metadata = 11;
  string createDate = 12;
  string lastModified = 13;
  bool disabled = 14;
  bool public = 15;
  string publicActions = 16;
  string status = 17;
  string error = 18;
}

// request message containing collection, signature, action and parameters
message CacheRequest {
  string collection = 1;
  string signature = 2;
  string action = 3;
  optional string parameters = 5;
}

// response message containing path, size and metadata
message CacheResult {
  string path = 1;
  uint64 filesize = 2;
  optional uint64 width = 3;
  optional uint64 height = 4;
  optional uint64 duration = 5;
  optional string mediaType = 6;
  optional string error = 7;
}
